# rpa-project-estimator

./: .gitignore  DEPLOYMENT_INSTRUCTIONS.md  Development.md  README.md  app.py  calculations.py  config.py  main.py  pyproject.toml  requirements.txt  rpa_projects_database.xlsx  test_setup.py
