[project]
name = "rpa-project-estimator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "python-dateutil>=2.9.0.post0",
    "streamlit>=1.49.1",
    "xlsxwriter>=3.2.9",
]
